<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">649165391811913</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Space Crack</string>
    <string name="email">E-mail</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="login_fail">Login failed</string>
    <string name="login_succes">Login succeeded</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="register_fail">Registration failed</string>
    <string name="register_succes">Registration succeeded</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="username">Username</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
