<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/spacebackground"
        android:scaleType="centerCrop"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/edt_register_username"
            android:hint="@string/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:id="@+id/edt_register_password"
            android:hint="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:password="true"
            android:id="@+id/edt_register_password_confirm"
            android:hint="@string/repeat_password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_register_email"
            android:hint="@string/email"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/button_width"
            android:id="@+id/btn_register_register"
            android:text="@string/register"/>

    </LinearLayout>

</FrameLayout>